# rainfall-vim-hs

./: .gitignore  LICENSE  rainfall-vim-hs.cabal  stack.yaml
app/: Main.hs
src/: Helper.hs  Lib.hs  Secrets.hs  Vim.hs  YOLP.hs
src/YOLP/: Base.hs  Geocoder.hs  Weather.hs
src/YOLP/Geocoder/: Query.hs  Result.hs
src/YOLP/Weather/: Query.hs  Result.hs
src/YOLP/Weather/Result/: Internal.hs
test/: Spec.hs  TVim.hs  TWeatherParse.hs
vim/autoload/: rainfallVimHs.vim
vim/plugin/: rainfallVimHs.vim
