name:                rainfall-vim-hs
version:             0.1
synopsis:
description:         Please see README.md
homepage:            https://github.com/lesguillemets/rainfall-vim-hs
license:             BSD3
license-file:        LICENSE
author:              lesguillemets
maintainer:          kgkacko+github@gmail.com
copyright:           2016 lesguillemets
category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Secrets
                     , Helper
                     , YOLP.Base
                     , YOLP.Weather
                     , YOLP.Weather.Result
                     , YOLP.Weather.Query
                     , YOLP.Geocoder
                     , YOLP.Geocoder.Result
                     , YOLP.Geocoder.Query
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , text
                     , http-conduit
                     , aeson
                     , lens
                     , lens-aeson
  default-language:    Haskell2010

executable rainfall-vim-hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , rainfall-vim-hs
  default-language:    Haskell2010

test-suite rainfall-vim-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rainfall-vim-hs
                     , http-conduit
                     , aeson
                     , bytestring
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lesguillemets/rainfall-vim-hs
